Added Kotlin Wrapping for Rust Libraries using UniFFI. Gradle config automaticly rebuilds rust portion per run